--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-01-31 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2026\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -8683,6 +8683,8 @@ msgid ""
 "The secondary fire instantaneously detonates any mines placed by the primary "
 "fire, similar to the %s."
 msgstr ""
+"O disparo secundário detona instantaneamente qualquer mina disparada pelo "
+"disparo primário, similar ao %s."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:557
 #, c-format
