--- a/common.en_GB.po
+++ b/common.en_GB.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-01-31 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: k9er, 2024\n"
+"Last-Translator: k9er, 2024-2026\n"
 "Language-Team: English (United Kingdom) (http://app.transifex.com/team-"
 "xonotic/xonotic/language/en_GB/)\n"
 "Language: en_GB\n"
@@ -8593,6 +8593,8 @@ msgid ""
 "The secondary fire instantaneously detonates any mines placed by the primary "
 "fire, similar to the %s."
 msgstr ""
+"The secondary fire instantaneously detonates any mines placed by the primary "
+"fire, similar to the %s."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:557
 #, c-format
