--- a/common.fr.po
+++ b/common.fr.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-02-20 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Hugo Locurcio, 2013-2014\n"
+"Last-Translator: Yannick Le Guen <leguen.yannick@gmail.com>, 2013-2026\n"
 "Language-Team: French (http://app.transifex.com/team-xonotic/xonotic/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -8830,12 +8830,18 @@ msgid ""
 "enemies if stepped on. Only a couple mines can be placed at any time, and "
 "after some time they will self-detonate."
 msgstr ""
+"Le %s place des mines sur le sol qui explosent et infligent des dégâts aux "
+"ennemis qui marchent dessus. Seules quelques mines peuvent être placées à la "
+"fois, et elles explosent automatiquement après un certain temps."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:555
 msgid ""
 "Uniquely, the mines explode sooner the closer an enemy comes to them. The "
 "secondary fire can be used to detonate all mines placed by the primary fire."
 msgstr ""
+"Particularité : plus un ennemi s'approche des mines, plus elles explosent "
+"rapidement. Le tir secondaire peut être utilisé pour faire exploser toutes "
+"les mines placées par le tir primaire."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:557
 #, c-format
