--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-02-20 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2026\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -8681,12 +8681,18 @@ msgid ""
 "enemies if stepped on. Only a couple mines can be placed at any time, and "
 "after some time they will self-detonate."
 msgstr ""
+"O %s coloca minas no chão quando disparado, que detonam e ferem inimigos que "
+"pisarem nelas. Só algumas minas podem ser colocadas em cada momento, e "
+"depois de algum tempo elas se detonarão sozinhas."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:555
 msgid ""
 "Uniquely, the mines explode sooner the closer an enemy comes to them. The "
 "secondary fire can be used to detonate all mines placed by the primary fire."
 msgstr ""
+"Unicamente, as minas explodem mais depressa quando um inimigo se aproxima "
+"mais. O disparo secundário pode ser usado para detonar todas as minas "
+"colocadas pelo disparo primário."
 
 #: qcsrc/common/weapons/weapon/minelayer.qc:557
 #, c-format
